--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -294,11 +294,15 @@ symbole terminalne. Na podstawie reguł definiujących symbole terminalne
 tworzony jest analizator leksykalny. Pozostałe reguły tworzą analizator
 składniowy.
 
-\JP{Tu bym widział jakiś krótki przykład takiego pliku i/lub odwołanie do odpowiedniego dodatku z omówionym przynajmniej fragmentem takiego kodu ze stworzonego projektu.}
+%\JP{Tu bym widział jakiś krótki przykład takiego pliku i/lub odwołanie do odpowiedniego dodatku z omówionym przynajmniej fragmentem takiego kodu ze stworzonego projektu.}
+
+Na listingu \ref{antlr_code} zamieszczony jest opis gramatyki rozpoznającej
+listy wymagań. Jest to implementacja gramatyki bezkontekstowej z przykładu
+4.1.
 
 \setcounter{lstlisting}{1}
-\begin{Code}
-\begin{lstlisting}[label=antlr_code, caption=Gramatyka ANTLR opisująca listę wymagań]
+\begin{Code}[h!]
+\begin{lstlisting}[label=antlr_code, caption=Gramatyka ANTLR opisująca listę wymagań, numbers=left, frame=single]
 grammar PDDL;
 
 options {
@@ -328,3 +332,37 @@ REQUIREMENT\_NAME
 
 \end{lstlisting}
 \end{Code}
+
+W pierwszej linijce znajduje się określenie typu i nazwy
+gramatyki. W tym przypadku jest to połączona gramatyka analizatora
+składniowego i leksykalnego (dyrektywa \texttt{grammar}). Nazwa gramatyki
+ma wpływ na nazwy wygenerowanych klas parserów. Będą to 
+\texttt{PDDLLexer.java} oraz \texttt{PDDLParser.java}.
+
+W sekcji \texttt{options} można ustawić parametry globalne, które mają
+wpływ na generację analizatorów. Nadanie parametrowi \texttt{output}
+wartości \texttt{AST} powoduje, że wynikiem działania analizatora
+składniowego będzie abstrakcyjne drzewo składniowe. Parametr 
+\texttt{ASTLabelType} określa klasę, której instancjami są wierchołki drzewa.
+
+W gramatyce występują cztery symbole leksykalne: lewy nawias \texttt{PLEFT}, 
+prawy nawias \texttt{PRIGHT}, słowo kluczowe \texttt{REQUIREMENTS} oraz
+nazwa wymagania \texttt{REQUIREMENT\_NAME}. Pierwsze trzy z nich 
+odpowiadają pojedynczym ciągom znaków (literałom). Można je umieścić
+w sekcji \texttt{tokens}. Wówczas istnieje możliwość wymiennego używania 
+nazwy symbolu i literału, co zwiększa czytelność pliku. Symbol
+\texttt{REQUIREMENT\_NAME} jest określony za pomocą wyrażenia regularnego
+w linijce 24.
+
+Zostały zdefiniowane dwa symbole nieterminalne: requirementsList. W produkcjach
+je definiujących, znak strzałki jest zastąpiony dwukropkiem. W przypadku,
+kiedy w gramatyce występują alternatywne produkcje posiadające po lewej
+stronie ten sam symbol nieterminalny, rozdziela się je znakiem ,,|''.
+
+Prawe strony produkcji zawierają znaki specjalne ,,!'' i ,,\^\ ''. Mają one
+wpływ na konstrukcję abstrakcyjnego drzewa składniowego. Wykrzyknik 
+oznacza, że występujący przed nim symbol powinien zostać pominięty przy
+budowie drzewa. Znak ,,\^\ '' występuje za symbolem, który stanie się rodzicem
+wierzchołków reprezentujących pozostałe symbole.
+
+
