--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -24,6 +24,8 @@ Planning Domains with Probabilistic Effects.} 2004. Dostęp w: http://reports-ar
 \bibitem{planning} I.Vlahavas, I.Refanidis. \emph{Planning and Scheduling.} Dostępny w: http://www.eetn.gr/index.php/eetn-publications/ai-research-in-greece/planning-and-scheduling [Dostęp: 18.01.2014]
 \bibitem{compilers}A. Aho, R. Sethi, J. Ullman. \emph{Kompilatory. Reguły, metody i narzędzia}.
 WNT, 2001.
+\bibitem{compilersEN}A. Aho, R.Sethi, J. Ullman. \emph{Compilers: principles,
+techniques, and tools} Pearson Education, 2007.
 \bibitem{pddl}M. Ghallab et al. \emph{PDDL -- The Planning Domain Definition Language. Version 1.2}.
 AIPS Conference, 1998.
 \bibitem{antlr}T.~Parr. \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
