kolejne poprawki do rodziału planning

--- a/thesis/tex/planning.tex
+++ b/thesis/tex/planning.tex
@@ -32,7 +32,7 @@ Na rysunku \ref{fig:automatyczne-planowanie} przedstawiono graficzne odwzorowani
 
 \section{Język PDDL}
 \label{sec:jezykpddl}
-W celu polepszenia wydajności automatycznego planowania, stworzone zostało kilka formalnych języków. Najpopularniejsze z nich to STRIPS (ang. \textit{\textbf{St}anford \textbf{R}esearch \textbf{I}nstitute \textbf{P}roblem \textbf{S}olver}) \cite{strips}, ADL (ang. \textit{Action description language}) \cite{adl} oraz PDDL (ang. \textit{Planning Domain Definition Language}) \cite{pddl}. PDDL, który stworzony został najpóźniej, jest wzorowany na dwóch pozostałych językach. Został utworzony przez Drew McDermott'a w roku 1998. Celem jego stworzenia był Międzynarodowy konkurs planistyczny (ang. \textit{International Planning Competition}),który bez odpowiedniego narzędzia nie mógłby się odbyć.
+Na potrzeby automatycznego planowania, stworzone zostało kilka formalnych języków, dedykowanych specjalnie dla tej dziedziny. Najpopularniejsze z nich to STRIPS (ang. \textit{\textbf{St}anford \textbf{R}esearch \textbf{I}nstitute \textbf{P}roblem \textbf{S}olver}) \cite{strips}, ADL (ang. \textit{Action description language}) \cite{adl} oraz PDDL (ang. \textit{Planning Domain Definition Language}) \cite{pddl}. PDDL, który stworzony został najpóźniej, jest wzorowany na dwóch pozostałych językach. Został utworzony przez Drew McDermott'a w roku 1998. Celem jego stworzenia był Międzynarodowy konkurs planistyczny (ang. \textit{International Planning Competition}),który bez odpowiedniego narzędzia nie mógłby się odbyć.
 
 Od pojawienia się pierwszej wersji języka w roku 1998, jest on systematycznie rozwijany. Kolejne wersje 2.1, 2.2, 3.0, oraz najnowsza 3.1 zostały użyte na międzynarodowych konkursach w latach 2002, 2004, 2006, 2008. Oprócz standardowych wersji języka, rozwijane są inne, niezależne warianty. Pośród nich znajdują się między innymi PDDL+, w którym zawarto procesy i zdarzenia \cite{pddlplus}, \emph{Web-PDDL} umożliwiający wyrażenie przestrzeni nazw za pomocą URI (ang. \textit{Uniform Resource Identifier}) \cite{webpddl}, czy NDDL (ang. \textit{New Domain Definition Language}), różniący się używaniem zmiennych oraz interwałów zamiast akcji \cite{npdl}.
 
