--- a/thesis/tex/cd_content.tex
+++ b/thesis/tex/cd_content.tex
@@ -1,6 +1,9 @@
 \chapter{Zawartość płyty CD}
-\JP{\begin{enumerate}
-\item Hobbit: Pustkowie Smauga (1080p, BrRip)
-\item Hobbit: Niezwykła podróż (1080p, BrRip)
-\item i nie, to nie są sugestie tego co powinno być na płycie, a tylko przypomnienie, że ten rozdział też trzeba wypełnić!
-\end{enumerate}}
+Do dokumentu załączona jest płyta CD o następującej zawartości:
+\begin{enumerate}
+\item Kod źródłowy oprogramowania
+\item Skompilowana wersja instalacyjna
+\item Instrukcja instalacji
+\item Praca dyplomowa w postaci pliku pdf
+\item Praca dyplomowa w postaci źródłowej
+\end{enumerate}
