przepisany na nowo rozdział 1.1 wstęp

--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -1,11 +1,12 @@
 \chapter{Wstęp}
 \section{Wprowadzenie}
-	Automatyczne planowanie jest dziedziną sztucznej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii \cite{planning}. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (\textit{Stanford Research Institute Problem Solver}) \cite{strips} oraz PDDL(\textit{Planning Domain Definition Language}) \cite{pddl}, który jest jednym z ważniejszych elementów tej pracy.
+Sztuczna inteligencja to dziedzina wywodząca się z informatyki. Jej początki wywodzą się z lat pięćdziesiątych XX wieku. Jeden z pierwszych badaczy,  John McCarthy, określił sztuczną inteligencję jako ,,naukę i technikę tworząca inteligentne maszyny''. Pomimo zmian, jakie dokonały się w przeciągu kolejnych 60 lat, definicję tą wciąż można uznać za aktualną. Sztuczna inteligencja obejmuje kilka zagadnień, między innymi logikę rozmytą, sieci neuronowe czy planowanie \cite{ai}.
+
+	Automatyczne planowanie jest dziedziną sztucznej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii \cite{planning}. Innymi słowy, zadaniem automatycznego planowania jest takie pokierwanie akcjami, by z stanu początkowego dotrzeć do określonego stanu końcowego (celu). Najczęściej wymagany jest również jak najmniejszy czas, lub koszt, wykonania ułożonego planu. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (\textit{Stanford Research Institute Problem Solver}) \cite{strips} oraz PDDL(\textit{Planning Domain Definition Language}) \cite{pddl}, który jest jednym z ważniejszych elementów tej pracy.
 	
-	Pierwsza, oficjalna wersja PDDL została wydana w październiku, roku 1998 \cite{pddl}. Język został rozwinięty specjalnie na potrzeby pierwszego międzynarodowego konkursu planowania – IPC. Pomimo stworzenia przez autora następcy PDDL, OPT (\textit{Ontology with Polymorphic Types}) \cite{opt}, język ten nadal był rozwijany. Na dzień dzisiejszy, aktualna wersja to 3.1 opublikowana w roku 2008 \cite{pddl3.1}. Została użyta między innymi na konkursach w roku 2008 oraz 2011.
+	Język PDDL jest jednym z wyspecjalizowanych języków służących do opisu zagadnień związanych z automatycznym planowaniem. Został stworzony specjalnie na międzynarodowy konkurs planistyczny (IPC - \emph{International Planning Competition}), mający miejsce w 1998 roku. Wzorowany był na innych językach wyspecjalizowanych w automatycznym planowaniu, między innymi na STRIPS'ie. W niektórych częściach języka PDDL można dostrzec podobieństwo do jego wzorca (na przykład w definiowanych akcjach), jednakże posiada on odmienną składnie.   
 
-	Oprócz głównej wersji PDDL, istnieją  inne, wyspecjalizowane warianty języka. Przykładowo  NDDL (\textit{New Domain Definition Language}) \cite{npdl}, stworzony przez NASA, jest językiem służącym do planowania interwałowego. Kolejna wersja to PPDDL (\textit{Probabilistic PDDL}) \cite{ppddl} używany podczas konkursu IPC w roku 2004 i 2006.
-
+W celu wydajnego tworzenia oprogramowania, programiści korzystają z rozmaitych narzędzi. Zdarza się jednak, że samo ich wyszukiwanie i instalacja w systemie operacyjnym, zajmuje więcej czasu niż stworzenie programu. Rozwiązaniem są środowiska programistyczne, zapewniające w większości przypadków podstawowe funkcjonalności, oraz możliwość łatwego wyszukiwania i komponowania potrzebnych narzędzi.
 
 \section{Motywacja}
 Pomimo stworzenia PDDL, autorzy nie zapewnił odpowiedniego środowiska programistycznego. Problemem jest również znalezienie odpowiedniego narzędzia. Obecnie dostępne rozwiązania posiadają istotne wady. Są to między innymi brak możliwości pracy z innym systemem  niż Windows, brakiem odpowiedniego formatowania kodu czy nieodpowiednim kolorowaniem składni. Założeniem projektu GUI4PDDL jest rozwiązanie większości niedogodności związanych z pisaniem w języku PDDL.
